...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="displayName:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EuZ-Nc-4Sm">
                                <rect key="frame" x="16" y="95" width="90" height="21"/>
                                <constraints>
...
                                </constraints>
                            </activityIndicatorView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="10027964317" borderStyle="roundedRect" placeholder="number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eCb-ae-e89">
                                <rect key="frame" x="16" y="151" width="343" height="30"/>
                                <nil key="textColor"/>
...
                                    <constraint firstAttribute="height" constant="30" id="qTv-pf-qLa"/>
                                </constraints>
                                <state key="normal" title="Call"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
...
                                            <constraint firstAttribute="width" constant="90" id="sJ0-3t-j6h"/>
                                        </constraints>
                                        <state key="normal" title="Accept"/>
                                        <connections>
                                            <action selector="acceptComingCall:" destination="v6N-Da-T9F" eventType="touchUpInside" id="Xld-Gy-Fkc"/>
...
                    </view>
                    <navigationItem key="navigationItem" id="6QU-Sx-nU3">
                        <barButtonItem key="rightBarButtonItem" title="login" style="plain" id="pEW-zD-6fZ">
                            <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
...
                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <state key="normal" title="hangup">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <state key="normal" title="silence">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <state key="selected" title="voice">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <state key="normal" title="backCamera">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <state key="selected" title="frontCamera">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <state key="normal" title="audio">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <state key="selected" title="video">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
